crates/tui/tests/storybook/snapshots/app_message__user_message_block_slash_command_accent.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                              14:37:03
 /permissions

  tip ctrl+enter / ctrl+q, steer the …
────────────────────────────────────────

────────────────────────────────────────
 ○ normal                       1:1 100%
