crates/tui/tests/storybook/snapshots/app_message__user_message_block_slash_command_accent.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 40 8
  0   0  30 bg=AnsiValue(236)
  0  30   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  0  38   1 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  12 fg=AnsiValue(208) bg=AnsiValue(236) attrs=bold
  1  13  26 bg=AnsiValue(236)
  2   0  39 bg=AnsiValue(236)
  3   0   6 fg=AnsiValue(208) attrs=bold
  3   6  19 fg=AnsiValue(244)
  3  25   2 fg=AnsiValue(244) attrs=dim
  3  27  11 fg=AnsiValue(244)
  4   0  40 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  40 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  22 bg=AnsiValue(233)
  7  32   8 fg=AnsiValue(244) bg=AnsiValue(233)
