crates/tui/tests/storybook/snapshots/app_message__user_message_timestamp_submission.visible.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                                                  14:37:03
 Keep the parser API stable.






─ ✿ working… ───────────────────────────── test/test-model ─

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
