crates/tui/tests/storybook/snapshots/app_message__user_message_timestamp_wrapping_and_themes.catppuccin-latte.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                                   14:37:03
 Preserve wrapping for Unicode 語 界  and a
 long user message.
 Keep this second line intact.







  tip ctrl+enter / ctrl+q, steer the curr…
────────────────────────────────────────────

────────────────────────────────────────────
 ○ normal                           1:1 100%
