crates/tui/tests/storybook/snapshots/app_message__user_message_timestamp_wrapping_and_themes.dark.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 44 16
  0   0  34 bg=AnsiValue(236)
  0  34   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  0  42   1 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  41 bg=AnsiValue(236) attrs=bold
  1  42   1 bg=AnsiValue(236)
  2   0   1 bg=AnsiValue(236)
  2   1  18 bg=AnsiValue(236) attrs=bold
  2  19  24 bg=AnsiValue(236)
  3   0   1 bg=AnsiValue(236)
  3   1  29 bg=AnsiValue(236) attrs=bold
  3  30  13 bg=AnsiValue(236)
  4   0  43 bg=AnsiValue(236)
 11   0   6 fg=AnsiValue(208) attrs=bold
 11   6  19 fg=AnsiValue(244)
 11  25   2 fg=AnsiValue(244) attrs=dim
 11  27  15 fg=AnsiValue(244)
 12   0  44 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  44 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  26 bg=AnsiValue(233)
 15  36   8 fg=AnsiValue(244) bg=AnsiValue(233)
